results/SpecGenBench/4-shot/log-CanConstruct-2023_11_04_20_11_12.txt
class CanConstruct {
    //@ requires ransomNote != null && magazine != null;
    //@ ensures \result ==> (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
    //@ ensures !\result ==> ransomNote.length() > magazine.length() || (\exists int i; 0 <= i && i < 26; cnt[i] < 0);
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ loop_invariant 0 <= i && i <= magazine.length();
        //@ loop_invariant (\forall int k; 0 <= k && k < i; cnt[magazine.charAt(k) - 'a'] >= 0);
        //@ decreases magazine.length() - i;
        for (int i = 0; i < magazine.length(); i++) {
            cnt[magazine.charAt(i) - 'a']++;
        }
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
        //@ loop_invariant (\forall int k; 0 <= k && k < i; cnt[ransomNote.charAt(k) - 'a'] >= 0);
        //@ decreases ransomNote.length() - i;
        for (int i = 0; i < ransomNote.length(); i++) {
            cnt[ransomNote.charAt(i) - 'a']--;
            if(cnt[ransomNote.charAt(i) - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: cannot find symbol
    //@ ensures \result ==> (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
                                                              ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:4: error: cannot find symbol
    //@ ensures !\result ==> ransomNote.length() > magazine.length() || (\exists int i; 0 <= i && i < 26; cnt[i] < 0);
                                                                                                          ^
  symbol:   variable cnt
  location: class CanConstruct
2 errors

